Todo: error handling, user title / credit submission, local storage, template images to aws

--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -10,8 +10,10 @@ html
     nav.menu
       .container
         .row
-          .ten.columns
-            a(href="/") Tee oma metsärunosi
+          .six.columns
+            h2 Luontoruno
+          .six.columns
+            a(href="/" class="pull-right") Tee oma metsärunosi
 
     .gallery
       each val, index in images
