--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -6,6 +6,7 @@ html
     link(href='.assets/favicon.ico', rel='icon')
     link(rel="stylesheet" href="./assets/main.css")
 
+
   body
     nav.menu
       .container
@@ -19,11 +20,9 @@ html
       each val, index in images
         .img-grid
           img(src=val.url)
-          p #{imagemeta[index].author} - #{imagemeta[index].date}
-        //- .asd
-        //-   pre #{imagemeta}
-      //- each val, index in imagemeta
-      //-   img(class='img-grid' src=val.url)
+          -var d = imagemeta[index].date
+          //- p #{imagemeta[index].date}
+          p= moment(d).format('DD.MM.YYYY')
 
     nav.pagination
       .container
@@ -32,13 +31,11 @@ html
             .pager.center
               if pre_page
                 a(href="?page=" + pre_page).prev
-                  i.fa.fa-arrow-circle-left
                   |  Edellinen
               span Sivu: #{page}
               if next_page
                 a(href="?page=" + next_page).next
                   | Seuraava
-                  i.fa.fa-arrow-circle-right
 
             - var m = 1
               while m < total_pages
