--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -25,6 +25,7 @@
 
 .pull-right {
   float: right;
+  margin-left: 1em;
 }
 
 .next, .prev {
@@ -39,6 +40,11 @@
 
 .btn-pagination {
   margin: 0.5em;
+  padding: 0;
+}
+
+.btn-pagination a {
   width: 100px !important;
   font-size: 16px;
+  display: inline-block;
 }
